<resources>
    //App name
    <string name="app_name">Mini Profile</string>

    // Login Screen
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="text_login">Login</string>
    <string name="msg_login_success">Login successful</string>
    <string name="err_username">Please enter username</string>
    <string name="err_password">Please enter password</string>

    //User profile screen
    <string name="hint_first_name">First name</string>
    <string name="hint_last_name">Last name</string>
    <string name="hint_email">Email</string>
    <string name="text_save">Save</string>
    <string name="text_Logout">Logout</string>
    <string name="msg_permission_denied">Permission denied</string>
    <string name="err_first_name">Please enter first name</string>
    <string name="err_last_name">Please enter last name</string>
    <string name="err_email">Please enter email</string>
    <string name="err_valid_email">Please enter valid email</string>

    // Keys
    <string name="key_user_id">userId</string>

</resources>
